# Randeepy

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  album.db  img.db
assets/: main.css
src/: backend.rs  main.rs
src/components/: add.rs  favorites.rs  mod.rs  nav.rs  view.rs
